feat: reserve & release stock
